force-app/main/default/objects/CDC_Metrics__c/CDC_Metrics__c.object-meta.xml
<CustomObject>
    <label>OBS CDC Metrics</label>
    <nameField>
        <displayFormat>CDC_Metrics-{000000}</displayFormat>
        <label>OBS CDC Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OBS CDC Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>