force-app/main/default/objects/CDC_Metrics__c/fields/Events_Consumed__c.field-meta.xml
<CustomField><fullName>Events_Consumed__c</fullName><label>Events Consumed</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>