force-app/main/default/objects/CDC_Metrics__c/fields/Events_Published__c.field-meta.xml
<CustomField><fullName>Events_Published__c</fullName><label>OBS Events Published</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>