force-app/main/default/objects/CDC_Metrics__c/fields/Object_Name__c.field-meta.xml
<CustomField><fullName>Object_Name__c</fullName><label>OBS Object Name</label><length>255</length><type>Text</type></CustomField>