force-app/main/default/objects/CDC_Metrics__c/fields/Replay_Lag__c.field-meta.xml
<CustomField><fullName>Replay_Lag__c</fullName><label>OBS Replay Lag</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>